--- a/run/README
+++ b/run/README
@@ -1,6 +1,7 @@
 To install the libraries and preprocess data, just execute make with available cores:
 	make CORES=8
 	
-You should create new directory for an experiment and prepare the config file. After
-that, you can start a experiment by executing run-experiment.sh with experiment directory:
+You should create new directory for an experiment and prepare the config file. You should
+also set working-dir parameter of the config file with the absolute path of the experiment directory. 
+After that, you can start a experiment by executing run-experiment.sh with experiment directory:
 	./run-experiment.sh {experiment-directory}
